# IT-MPC

./: README.md  TODO.md
src/agents_cpp/: CMakeLists.txt  package.xml
src/agents_cpp/config/: controllers.yaml  controllers_gz.yaml  gazebo_bridge.yaml
src/agents_cpp/launch/: bringup.launch.py  bringup_multiple.launch.py  bringup_multiple_gazebo.launch.py  bringup_ns.launch.py  display.launch.py
src/agents_cpp/rviz/: display_car.rviz  multiple_cars.rviz
src/agents_cpp/src/: ign_pose_to_tf.py  odom_to_tf.py
src/agents_cpp/src/bicycle/: CMakeLists.txt  bicycle.cpp  bicycle.h
src/agents_cpp/urdf/: car.gz_ros2_control.urdf.xacro  car.ros2_control.xacro  car.urdf copy.xacro  car.urdf.xacro  car.xacro  car_gazebo.ros2_control.xacro  robot.urdf.xacro  steering_wheel.xacro  wheel.xacro
src/mppi/: CMakeLists.txt  package.xml
src/mppi/config/: params.yaml
src/mppi/launch/: demo_mppi_tracking.launch.py  tracking_ackermann.launch.py
src/mppi/rviz/: 0.rviz
src/mppi/src/common/: CMakeLists.txt
src/mppi/src/common/config_reader/: config_reader.cpp  config_reader.h
src/mppi/src/mppi/: CMakeLists.txt  demo_tracking.h  mppi.cpp  mppi.h
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: demo_tracking_config.yaml  params.yaml
src/planning/launch/: demo_mppi_tracking.launch.py  tracking_ackermann.py
src/planning/rviz/: 0.rviz
src/planning/src/: odom_to_tf.py
src/planning/src/common/: CMakeLists.txt
src/planning/src/mppi/: CMakeLists.txt  demo_tracking.cpp  demo_tracking.h  mppi.h
src/planning/src/test_demo/avoid_collision/: main.py  mppi_obstacle_avoider.py  util.py
src/planning/src/test_demo/mppi/: main_mppi.py  mppi.py  vehicle.py
